[part5] Begin prepare project. @TODO: include js workflow from [correction-part4]

--- a/src/public/form.html
+++ b/src/public/form.html
@@ -7,7 +7,7 @@
     <link rel="icon" href="img/favicon.ico" sizes="any">
     <title>Adopt a cat :: Formulaire</title>
     <link rel="stylesheet" href="../node_modules/gardevoir/dist/index.css">
-    <link rel="stylesheet" href="css/main.css">
+    <link rel="stylesheet" href="dist/css/main.css">
 </head>
 <body>
     <header>
@@ -48,5 +48,6 @@
         </section>
     </main>
     <script src="js/main.js" defer></script>
+    <script src="dist/js/main.js" defer></script>
 </body>
 </html>
