[part2-1] optimise css by spliting css stylesheet to many files

--- a/src/form.html
+++ b/src/form.html
@@ -8,6 +8,7 @@
     <title>Adopt a cat :: Formulaire</title>
     <link rel="stylesheet" href="../node_modules/gardevoir/dist/index.css">
     <link rel="stylesheet" href="css/main.css">
+    <link rel="stylesheet" href="css/form.css">
 </head>
 <body>
     <header>
