--- a/src/index.html
+++ b/src/index.html
@@ -7,6 +7,7 @@
     <title>Document</title>
     <link rel="stylesheet" href="../node_modules/gardevoir/dist/index.css">
     <link rel="stylesheet" href="css/main.css">
+    <link rel="stylesheet" href="css/index.css">
 </head>
 <body>
     <header>
