--- a/src/public/index.html
+++ b/src/public/index.html
@@ -4,9 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="../node_modules/gardevoir/dist/index.css">
-    <link rel="stylesheet" href="css/main.css">
+    <title>Adopt a cat :: index</title>
+    <link rel="stylesheet" href="../../node_modules/gardevoir/dist/index.css">
+    <link rel="stylesheet" href="dist/css/main.css">
+    <link rel="stylesheet" href="dist/css/index.css">
 </head>
 <body>
     <header>
