[correction-part3] SCSS implementation.

--- a/src/public/form.html
+++ b/src/public/form.html
@@ -6,9 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" href="img/favicon.ico" sizes="any">
     <title>Adopt a cat :: Formulaire</title>
-    <link rel="stylesheet" href="../node_modules/gardevoir/dist/index.css">
-    <link rel="stylesheet" href="css/main.css">
-    <link rel="stylesheet" href="css/form.css">
+    <link rel="stylesheet" href="../../node_modules/gardevoir/dist/index.css">
+    <link rel="stylesheet" href="dist/css/main.css">
+    <link rel="stylesheet" href="dist/css/form.css">
 </head>
 <body>
     <header>
