--- a/src/public/index.html
+++ b/src/public/index.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="../node_modules/gardevoir/dist/index.css">
-    <link rel="stylesheet" href="css/main.css">
-    <link rel="stylesheet" href="css/index.css">
+    <title>Adopt a cat :: index</title>
+    <link rel="stylesheet" href="../../node_modules/gardevoir/dist/index.css">
+    <link rel="stylesheet" href="dist/css/main.css">
+    <link rel="stylesheet" href="dist/css/index.css">
 </head>
 <body>
     <header>
@@ -42,7 +42,7 @@
             </div>
             <script>
 <!--
-function drop(ev) {
+function drop2(ev) {
 ev.preventDefault();
 var d = ev.dataTransfer.getData("the_id");
 ev.target.appendChild(document.getElementById(d));
